# tortoise

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cppturtle/: CMakeLists.txt  cppt_macros_typedefs.hpp  cppturtle.cpp  cppturtle.h  cppturtle.hpp
docs/: DOCUMENTATION.md
examples/rectangle/: CMakeLists.txt  rectangle.cpp
examples/rectangle/src/: CMakeLists.txt  macros_typedefs.hpp
examples/square/: CMakeLists.txt  square.cpp
examples/square/src/: CMakeLists.txt  tortoise.hpp
examples/triangle/: CMakeLists.txt  triangle.cpp
examples/triangle/src/: CMakeLists.txt  macros_typedefs.hpp
src/: CMakeLists.txt  cppt_macros_typedefs.hpp  cppturtle.cpp  cppturtle.hpp  macros_typedefs.hpp  tortoise.cpp  tortoise.hpp
tests/: main.cpp  tests.cpp
